<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.add.AddCourseActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="255"
            android:hint="@string/course_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/day"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_time"
            android:contentDescription="@string/to_start_time"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textColor="@color/textPrimary"/>
            <TextView
                android:id="@+id/tv_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_00"
                android:textColor="@color/textPrimary"
                android:textStyle="bold"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_time"
            android:contentDescription="@string/to_end_time"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:textColor="@color/textPrimary"/>
            <TextView
                android:id="@+id/tv_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_00"
                android:textColor="@color/textPrimary"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_lecture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lecturer"
            android:maxLines="1"
            android:maxLength="255"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note"
            android:lines="4"
            android:gravity="top"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>